Prep: Configuración de producción para el backend (CORS, Port, Docker)